frontend/k8s/receive-forms-middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: receive-forms-app-redirect-to-https
  namespace: receive-forms
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: receive-forms-app-redirect-www
  namespace: receive-forms
spec:
  redirectRegex:
    regex: ^https?://www\.(.*)
    replacement: https://${1}
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: receive-forms-app-cors-headers
  namespace: receive-forms
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowOriginList:
      - "https://app.form.arcobatrox.com.br"
      - "https://www.app.form.arcobatrox.com.br"
    accessControlAllowHeaders:
      - Content-Type
      - Authorization
      - X-Requested-With
    accessControlAllowCredentials: true
