frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: receive-forms-app
  namespace: receive-forms
  labels:
    app.kubernetes.io/name: receive-forms-app
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: arcobatrox
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: receive-forms-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
